# prosoft-school

./: README.md
Moves in maze/: moves_in_maze.cpp  moves_in_maze.md
Roller Coaster/: .gitignore  CmakeLists.txt  roller_coaster.cpp  roller_coaster.md
Roller Coaster/inc/: roller_coaster.h
Roller Coaster/src/: CMakeLists.txt  roller_coaster.cpp
Roller Coaster/tests/: CMakeLists.txt  tests_main.cpp
Shadows of the Knight - Episode 1/: shadows_of_the_knight_ep1.cpp  shadows_of_the_knight_ep1.md
Shadows of the Knight - Episode 2/: shadows_of_the_knight_ep2.cpp  shadows_of_the_knight_ep2.md
Super Computer/: super_computer.cpp  super_computer.md
The labyrinth/: the_labyrinth.cpp  the_labyrinth.md
